--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@vt/backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "dev": "nodemon",
-    "start": "node dist/server.js",
-    "build": "rimraf ./dist && tsc"
+    "dev": "nodemon --watch src --ext ts --exec ts-node -r tsconfig-paths/register src/server.ts",
+    "start": "node ../../dist/backend/server.js",
+    "build": "rimraf ./dist && tsc --project tsconfig.build.json && tsc-alias"
   },
   "author": "",
   "license": "ISC",
@@ -26,6 +26,8 @@
     "@types/node": "^20.14.10",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.10",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.5.3"
   }
 }
