--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   "description": "",
   "workspaces": [
     "apps/*",
-    "packages/*"
+    "packages/*",
+    "!apps/memberApp"
   ],
-  "devDependencies": {
-    "typescript": "^5.6.3"
+ "devDependencies": {
+    "@types/lodash": "^4.17.7",
+    "babel-plugin-module-resolver": "^5.0.2"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   },
   "packageManager": "yarn@3.6.4"
 }
