--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -16,14 +16,18 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "helmet": "^7.1.0"
+    "express-correlation-id": "^3.0.1",
+    "helmet": "^7.1.0",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/express-correlation-id": "^1.2.6",
     "@types/helmet": "^4.0.0",
     "@types/node": "^20.14.10",
+    "@types/lodash": "^4.17.7",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.10",
