--- a/apps/backend/tsconfig.build.json
+++ b/apps/backend/tsconfig.build.json
@@ -1,35 +1,32 @@
 {
-    "extends": "../../tsconfig.json",
-    "compilerOptions": {
-      "target": "es2016",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-      "module": "commonjs",                                /* Specify what module code is generated. */
-      "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
-      "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
-      "strict": true,                                      /* Enable all strict type-checking options. */
-      "skipLibCheck": true ,                                /* Skip type checking all .d.ts files. */
-      "outDir": "../../dist/backend",
-      "rootDir": "./src"
-    },
-    "include": [
-        "./types/**/*",
-        "./src/**/*.ts",
-        "./src/**/*.js",
-        "./src/**/*.json"
-      ],
-      "paths": {
-        "@src/*": [
-          "./src/*"
-        ],
-        "@vt/core/*": [
-          "../../packages/core/*",
-          "../../packages/core/dist/*"
-        ],
-      },
-    "exclude": ["node_modules", "**/*.spec.ts"],
-    "references": [
-      {
-        "path": "../../packages/core"
-      }
-    ]
-  }
-  
+  "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "baseUrl": ".",
+    "typeRoots": [
+    "./types/"
+  ],
+    "target": "es2016",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
+    "module": "commonjs",                                /* Specify what module code is generated. */
+    "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
+    "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
+    "resolveJsonModule": true,
+    "strict": true,                                      /* Enable all strict type-checking options. */
+    "skipLibCheck": true ,                                /* Skip type checking all .d.ts files. */
+    "outDir": "../../dist/backend",
+  },
+  "path" :{
+    "@src/*": ["./src/*"],
+    "@vt/core/*": ["../../packages/core/*", "../../packages/core/dist/*"],
+  },
+  "include": [
+    "./types/**/*",
+    "./src/**/*.ts",
+    "./src/**/*.js",
+    "./src/**/*.json"
+  ],
+  "references": [
+    {
+      "path": "../../packages/core"
+    }
+  ]
+}
