--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -1,14 +1,22 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
+      "baseUrl": ".",
+      "typeRoots": [
+      "./types/"
+    ],
       "target": "es2016",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
       "module": "commonjs",                                /* Specify what module code is generated. */
       "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
       "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
+      "resolveJsonModule": true,
       "strict": true,                                      /* Enable all strict type-checking options. */
       "skipLibCheck": true ,                                /* Skip type checking all .d.ts files. */
       "outDir": "../../dist/backend",
-      "rootDir": "./src"
+    },
+    "path" :{
+      "@src/*": ["./src/*"],
+      "@vt/core/*": ["../../packages/core/*", "../../packages/core/dist/*"],
     },
     "include": [
       "./types/**/*",
@@ -16,7 +24,6 @@
       "./src/**/*.js",
       "./src/**/*.json"
     ],
-    "exclude": ["node_modules", "**/*.spec.ts"],
     "references": [
       {
         "path": "../../packages/core"
