--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "src/server.js",
   "scripts": {
-    "dev": "nodemon --watch src --ext ts --exec ts-node -r tsconfig-paths/register src/server.ts",
+    "dev": "nodemon",
     "start": "node ../../dist/backend/server.js",
     "build": "rimraf ./dist && tsc --project tsconfig.build.json && tsc-alias"
   },
