feat(backend) : add supabase env

--- a/apps/backend/.env.exmaple
+++ b/apps/backend/.env.exmaple
@@ -1,2 +1,8 @@
-SUPABASE_PROJECT_REF = ""
+SUPABASE_URL = ""
 SUPABASE_API_KEY = ""
+SUPABASE_Project_ID =""
+
+APP_NAME = ""
+NODE_ENV = ""
+
+PORT = ""
