--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "dev": "nodemon",
     "start": "node ../../dist/backend/server.js",
-    "build": "rimraf ./dist && tsc --project tsconfig.build.json && tsc-alias"
+    "build": "rimraf ./dist && tsc --project tsconfig.build.json && tsc-alias",
+    "build:supabase" : "node ../../dist/backend/src/constants/generateSupabaseTypes.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@supabase/supabase-js": "^2.46.1",
     "@vt/core": "*",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -26,9 +28,10 @@
     "@types/express": "^4.17.21",
     "@types/express-correlation-id": "^1.2.6",
     "@types/helmet": "^4.0.0",
-    "@types/node": "^20.14.10",
     "@types/lodash": "^4.17.7",
+    "@types/node": "^20.14.10",
     "nodemon": "^3.1.4",
+    "supabase": "^1.219.2",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
