--- a/apps/memberApp/package.json
+++ b/apps/memberApp/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/cli-link-assets": "^15.1.2",
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "react": "18.2.0",
