--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,12 +6,13 @@
     "dev": "nodemon",
     "start": "node ../../dist/backend/server.js",
     "build": "rimraf ./dist && tsc --project tsconfig.build.json && tsc-alias",
-    "build:supabase" : "node ../../dist/backend/src/constants/generateSupabaseTypes.js"
+    "build:supabase": "node ../../dist/backend/src/constants/generateSupabaseTypes.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "@supabase/supabase-js": "^2.46.1",
     "@vt/core": "*",
     "body-parser": "^1.20.2",
@@ -31,6 +32,7 @@
     "@types/lodash": "^4.17.7",
     "@types/node": "^20.14.10",
     "nodemon": "^3.1.4",
+    "prisma": "^5.22.0",
     "supabase": "^1.219.2",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.10",
