--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,7 +6,13 @@
     "dev": "nodemon",
     "start": "node ../../dist/backend/server.js",
     "build": "rimraf ./dist && tsc --project tsconfig.build.json && tsc-alias",
-    "build:supabase": "node ../../dist/backend/src/constants/generateSupabaseTypes.js"
+    "build:supabase": "node ../../dist/backend/src/constants/generateSupabaseTypes.js",
+    "prisma:gen": "prisma generate",
+    "prisma:deploy": "prisma migrate deploy",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:pull-db": "prisma db pull",
+    "prisma:push-db": "prisma db push",
+    "prisma:seed": "npx ts-node --project tsconfig.json -r tsconfig-paths/register --transpile-only ./seeders/seed.ts"
   },
   "author": "",
   "license": "ISC",
