--- a/apps/memberApp/package.json
+++ b/apps/memberApp/package.json
@@ -16,8 +16,10 @@
     "@react-navigation/native-stack": "^6.11.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.35.0",
+    "react-native-svg": "^15.10.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
