feat: add camere, all test landing screen and routes

--- a/apps/memberApp/app.json
+++ b/apps/memberApp/app.json
@@ -1,4 +1,14 @@
 {
   "name": "memberApp",
-  "displayName": "memberApp"
+  "displayName": "memberApp",
+  "plugins": [
+    [
+      "react-native-vision-camera",
+      {
+        "cameraPermissionText": "$(PRODUCT_NAME) needs access to your Camera.",
+        "enableMicrophonePermission": true,
+        "microphonePermissionText": "$(PRODUCT_NAME) needs access to your Microphone."
+      }
+    ]
+  ]
 }
