--- a/apps/memberApp/package.json
+++ b/apps/memberApp/package.json
@@ -17,10 +17,12 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-pager-view": "^6.7.0",
     "react-native-permissions": "^5.2.4",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.35.0",
     "react-native-svg": "^15.10.1",
+    "react-native-tab-view": "^4.0.5",
     "react-native-vector-icons": "^10.2.0",
     "react-native-vision-camera": "^4.6.3"
   },
@@ -28,6 +30,7 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@react-native-community/cli": "latest",
     "@react-native/babel-preset": "0.74.87",
     "@react-native/eslint-config": "0.74.87",
     "@react-native/metro-config": "0.74.87",
@@ -40,8 +43,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4",
-    "@react-native-community/cli": "latest"
+    "typescript": "5.0.4"
   },
   "engines": {
     "node": ">=18"
