--- a/apps/memberApp/package.json
+++ b/apps/memberApp/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "react-native-reanimated": "3.14.0",
     "@react-native-community/cli-link-assets": "^15.1.2",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
