--- a/apps/memberApp/package.json
+++ b/apps/memberApp/package.json
@@ -19,6 +19,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-pager-view": "^6.7.0",
     "react-native-permissions": "^5.2.4",
+    "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.35.0",
     "react-native-svg": "^15.10.1",
