--- a/apps/memberApp/package.json
+++ b/apps/memberApp/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "^2.24.0",
     "react-native-pager-view": "^6.7.0",
     "react-native-permissions": "^5.2.4",
     "react-native-reanimated": "^3.14.0",
