--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -21,6 +21,7 @@
     "@prisma/client": "^5.22.0",
     "@supabase/supabase-js": "^2.46.1",
     "@vt/core": "*",
+    "argon2": "^0.41.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
