--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -22,13 +22,16 @@
     "@supabase/supabase-js": "^2.46.1",
     "@vt/core": "*",
     "argon2": "^0.41.1",
+    "axios": "^1.8.4",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-correlation-id": "^3.0.1",
+    "form-data": "^4.0.2",
     "helmet": "^7.1.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "multer": "^1.4.5-lts.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -37,6 +40,7 @@
     "@types/express-correlation-id": "^1.2.6",
     "@types/helmet": "^4.0.0",
     "@types/lodash": "^4.17.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.14.10",
     "nodemon": "^3.1.4",
     "prisma": "^5.22.0",
