feat : backend update

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -18,26 +18,28 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.787.0",
     "@prisma/client": "^5.22.0",
     "@supabase/supabase-js": "^2.46.1",
     "@vt/core": "*",
     "argon2": "^0.41.1",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.8.4",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-correlation-id": "^3.0.1",
-    "form-data": "^4.0.2",
+    "express-fileupload": "^1.5.1",
     "helmet": "^7.1.0",
-    "lodash": "^4.17.21",
-    "multer": "^1.4.5-lts.2"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/express-correlation-id": "^1.2.6",
+    "@types/express-fileupload": "^1.5.1",
     "@types/helmet": "^4.0.0",
     "@types/lodash": "^4.17.7",
     "@types/multer": "^1.4.12",
