add icon and change app name

--- a/apps/memberApp/app.json
+++ b/apps/memberApp/app.json
@@ -1,6 +1,6 @@
 {
   "name": "memberApp",
-  "displayName": "memberApp",
+  "displayName": "OptiTest",
   "plugins": [
     [
       "react-native-vision-camera",
