--- a/apps/memberApp/package.json
+++ b/apps/memberApp/package.json
@@ -36,6 +36,7 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@bam.tech/react-native-make": "^3.0.3",
     "@react-native-community/cli": "latest",
     "@react-native/babel-preset": "0.74.87",
     "@react-native/eslint-config": "0.74.87",
@@ -48,6 +49,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-make": "^1.0.1",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
