--- a/apps/memberApp/package.json
+++ b/apps/memberApp/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@react-native-community/cli-link-assets": "^15.1.2",
-    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
@@ -20,10 +19,10 @@
     "react": "18.2.0",
     "react-hook-form": "^7.55.0",
     "react-native": "0.74.5",
-    "react-native-audio-record": "^0.2.2",
     "react-native-audio-recorder-player": "^3.6.12",
     "react-native-chart-kit": "^6.12.0",
     "react-native-date-picker": "^5.0.12",
+    "react-native-dotenv": "^3.4.11",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-pager-view": "^6.7.0",
@@ -31,7 +30,6 @@
     "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.35.0",
-    "react-native-sound": "^0.11.2",
     "react-native-svg": "^15.10.1",
     "react-native-tab-view": "^4.0.5",
     "react-native-vector-icons": "^10.2.0",
@@ -54,6 +52,7 @@
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "patch-package": "^8.0.0",
     "prettier": "2.8.8",
     "react-native-make": "^1.0.1",
     "react-test-renderer": "18.2.0",
