--- a/apps/memberApp/android/app/build.gradle
+++ b/apps/memberApp/android/app/build.gradle
@@ -82,6 +82,11 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        externalNativeBuild {
+            cmake {
+                arguments "-DCMAKE_BUILD_DIR=build"
+            }
+        }
     }
     signingConfigs {
         debug {
