--- a/apps/memberApp/package.json
+++ b/apps/memberApp/package.json
@@ -19,8 +19,10 @@
     "@supabase/supabase-js": "^2.49.8",
     "@tanstack/react-query": "^5.74.4",
     "argon2": "^0.43.0",
+    "i18next": "^25.2.1",
     "react": "18.2.0",
     "react-hook-form": "^7.55.0",
+    "react-i18next": "^15.5.2",
     "react-native": "0.74.5",
     "react-native-audio-recorder-player": "^3.6.12",
     "react-native-bcrypt": "^2.4.0",
@@ -31,7 +33,7 @@
     "react-native-gesture-handler": "^2.24.0",
     "react-native-pager-view": "^6.7.0",
     "react-native-permissions": "^5.4.0",
-    "react-native-reanimated": "^3.14.0",
+    "react-native-reanimated": "3.14",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.35.0",
     "react-native-svg": "^15.10.1",
