--- a/apps/memberApp/package.json
+++ b/apps/memberApp/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/cli-link-assets": "^15.1.2",
+    "@react-native-community/datetimepicker": "^8.4.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@supabase/supabase-js": "^2.49.8",
     "@tanstack/react-query": "^5.74.4",
+    "@vt/core": "workspace:*",
     "argon2": "^0.43.0",
     "i18next": "^25.2.1",
     "react": "18.2.0",
@@ -31,6 +33,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-image-picker": "^8.2.1",
     "react-native-pager-view": "^6.7.0",
     "react-native-permissions": "^5.4.0",
     "react-native-reanimated": "3.14",
