--- a/apps/memberApp/package.json
+++ b/apps/memberApp/package.json
@@ -30,6 +30,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-date-picker": "^5.0.12",
     "react-native-dotenv": "^3.4.11",
+    "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-image-picker": "^8.2.1",
@@ -42,6 +43,7 @@
     "react-native-tab-view": "^4.0.5",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-video": "^6.15.0",
     "react-native-vision-camera": "^4.6.3",
     "rn-fetch-blob": "^0.12.0"
   },
