--- a/apps/memberApp/package.json
+++ b/apps/memberApp/package.json
@@ -20,6 +20,7 @@
     "@supabase/supabase-js": "^2.49.8",
     "@tanstack/react-query": "^5.74.4",
     "argon2": "^0.43.0",
+    "dayjs": "^1.11.13",
     "i18next": "^25.2.1",
     "react": "18.2.0",
     "react-hook-form": "^7.55.0",
