Add new drawable assets and network security configuration
- Added PNG assets for various navigation icons in different drawable densities (mdpi, xhdpi, xxhdpi, xxxhdpi).
- Included a new video asset for nature ocean sounds.
- Created a network security configuration XML file to permit cleartext traffic.

--- a/apps/memberApp/.gitignore
+++ b/apps/memberApp/.gitignore
@@ -33,6 +33,9 @@ local.properties
 .cxx/
 *.keystore
 !debug.keystore
+android/app/my-release-key.keystore
+android/gradle.properties
+
 
 # node.js
 #
@@ -74,3 +77,4 @@ yarn-error.log
 !.yarn/versions
 
 .env
+.env.production
